fixed overlapping search live result

--- a/Resources/Themes/Frontend/OstTrendsTheme/frontend/_public/src/less/_modules/header.less
+++ b/Resources/Themes/Frontend/OstTrendsTheme/frontend/_public/src/less/_modules/header.less
@@ -274,3 +274,13 @@ body .header-main {
 
 
 
+
+
+
+@media screen and(min-width: @tabletViewportWidth) {
+    .main-search--results {
+        top: 102px;
+    }
+}
+
+
